# HelloWorldJINI

./: .gitignore  App.js  GypAndroid.mk  GypAndroid2.mk  Makefile  app.json  appcenter-post-clone.sh  helloworld.djinni  libhelloworld_jni.target.mk  package.json  run_djinni.sh
android/: .project  settings.gradle
android/app/: BUCK  CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml  jniLibs  staticLibs
android/app/src/main/assets/: appcenter-config.json
android/app/src/main/java/com/helloworldjini/: DehazeModule.java  DehazePackage.java  HelloWorldModule.java  HelloWorldPackager.java  MainActivity.java  MainApplication.java
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
build_ios/libhelloworld.xcodeproj/: project.pbxproj
generated-src/cpp/: dehaze.hpp  hello_world.hpp
generated-src/java/com/helloworldjini/: HelloWorld.java
generated-src/jni/: NativeDehaze.cpp  NativeDehaze.hpp  NativeHelloWorld.cpp
generated-src/objc/: HWDehaze+Private.h  HWDehaze+Private.mm  HWDehaze.h  HWHelloWorld+Private.mm  HWHelloWorld.h
ios/: Podfile
ios/HelloWorldJINI/: AppDelegate.m  Info.plist
ios/HelloWorldJINI.xcodeproj/: project.pbxproj
ios/HelloWorldJINI.xcodeproj/xcshareddata/xcschemes/: HelloWorldJINI-tvOS.xcscheme  HelloWorldJINI.xcscheme
ios/HelloWorldJINI/Base.lproj/: LaunchScreen.xib
ios/HelloWorldJINI/JSBridge/: HelloWorld.m
ios/HelloWorldJINITests/: HelloWorldJINITests.m
src/cpp/: dehaze_impl.cpp  dehaze_impl.hpp  hello_world_impl.cpp  hello_world_impl.hpp
(+2 files in other folders)
